--- a/WolvenKit/Views/Shell/DockingAdapter.xaml
+++ b/WolvenKit/Views/Shell/DockingAdapter.xaml
@@ -47,9 +47,33 @@
                 </Setter.Value>
             </Setter>
         </Style>
+            <syncfusion:DockingManager.Resources>
+                <DataTemplate x:Key="RedDocumentDockingHeader" DataType="{x:Type docvm:RedDocumentViewModel}">
+                    <DockPanel ToolTip="{Binding RelativePath}">
+                        <Image x:Name="DockIcon" Width="13" Margin="0,0,4,0" Source="{svgc:SvgImage /Resources/Media/Images/Icons/Files/mesh.svg}" Style="{DynamicResource FileIcons}" />
+                        <TextBlock
+                        x:Name="TemplateTextBlock"
+                        Grid.Column="1"
+                        Margin="0,0,0,1"
+                        Foreground="White"
+                        Text="{TemplateBinding}"
+                        ToolTip="{Binding RelativePath}"/>
+                    </DockPanel>
+                </DataTemplate>
+                <DataTemplate x:Key="BasicDockingHeader">
+                    <DockPanel>
+                        <TextBlock
+                        x:Name="TemplateTextBlock"
+                        Grid.Column="1"
+                        Margin="0,0,0,1"
+                        Foreground="White"
+                        Text="{TemplateBinding}"/>
+                    </DockPanel>
+                </DataTemplate>
+                <converters1:DockingManagerHeaderTemplateSelector x:Key="dockingManagerHeaderTemplateSelector"/>
+            </syncfusion:DockingManager.Resources>
     </UserControl.Resources-->
     <Grid>
-
 
         <syncfusion:DockingManager x:Name="PART_DockingManager"
                                    ActiveWindowChanged="PART_DockingManager_ActiveWindowChanged_1"
@@ -60,23 +84,51 @@
                                    UseDocumentContainer="True"
                                    Loaded="PART_DockingManager_Loaded"
                                    CloseButtonClick="PART_DockingManagerOnCloseButtonClick"
-                                   DockStateChanging="PART_DockingManagerOnDockStateChanging">
+                                   DockStateChanging="PART_DockingManagerOnDockStateChanging"
+                                   DocumentTabItemStyle="{StaticResource RedDocumentTabItemExtStyle}">
 
+            <!--syncfusion:DockingManager.DocumentTabItemStyle>
+                <Style TargetType="{x:Type syncfusion:TabItemExt}">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type syncfusion:TabItemExt}">
+                                <DockPanel ToolTip="{Binding RelativePath}" x:Name="PART_DockPanel">
+                                    <Image x:Name="DockIcon" Width="13" Margin="0,0,4,0" Source="{svgc:SvgImage /Resources/Media/Images/Icons/Files/mesh.svg}" Style="{DynamicResource FileIcons}" DataContext="" />
+                                    <ToggleButton
+                                        Name="PART_CloseButton" Width="15" Height="14" Margin="1,0,10,0" VerticalAlignment="Top"                                 
+                                        DockPanel.Dock="Right" 
+                                        Focusable="False" 
+                                        Visibility="Collapsed"
+                                        Command="syncfusion:TabControlCommands.CloseTabItem" />
+                                    <Image
+                                        x:Name="PART_Image"
+					                    Source="{TemplateBinding syncfusion:TabControlExt.Image}"
+					                    Height="{TemplateBinding syncfusion:TabControlExt.ImageHeight}"
+					                    Width="{TemplateBinding syncfusion:TabControlExt.ImageWidth}"
+					                    Stretch="Fill" Margin="{TemplateBinding IconMargin}"
+					                    SnapsToDevicePixels="True" VerticalAlignment="Center"
+                                        DockPanel.Dock="{Binding Path=(syncfusion:TabControlExt.ImageAlignment), Mode=OneWay, RelativeSource={RelativeSource TemplatedParent}}"/>
+                                    <ContentPresenter
+                                        ContentSource="Header" x:Name="Content" Margin="{TemplateBinding HeaderMargin}" TextElement.Foreground="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type syncfusion:TabItemExt}},FallbackValue=Transparent}" 
+                                        RecognizesAccessKey="False" Content="{TemplateBinding HeaderedContentControl.Header}" 
+                                        ContentTemplate="{TemplateBinding HeaderedContentControl.HeaderTemplate}"                                           
+                                        HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                                        VerticalAlignment="{TemplateBinding VerticalContentAlignment}" 
+                                        SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}" />
+                                    <ContentPresenter
+                                        ContentSource="Header" x:Name="PART_EditHeader" Visibility="Collapsed"
+                                        Margin="{TemplateBinding HeaderMargin}" TextElement.Foreground="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type syncfusion:TabItemExt}},FallbackValue=Transparent}" 
+                                        RecognizesAccessKey="True" Content="{TemplateBinding HeaderedContentControl.Header}"               
+                                        HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" 
+                                        VerticalAlignment="{TemplateBinding VerticalContentAlignment}" 
+                                        SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}" />
+                                </DockPanel>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </syncfusion:DockingManager.DocumentTabItemStyle-->
             <!--ContentControl-->
-                <syncfusion:DockingManager.HeaderTemplate>
-                    <DataTemplate>
-                        <DockPanel ToolTip="{Binding RelativePath}">
-                            <Image x:Name="DockIcon" Width="13" Margin="0,0,4,0" Source="{svgc:SvgImage /Resources/Media/Images/Icons/Files/mesh.svg}" Style="{DynamicResource FileIcons}" />
-                            <TextBlock
-                                x:Name="TemplateTextBlock"
-                                Grid.Column="1"
-                                Margin="0,0,0,1"
-                                Foreground="White"
-                                Text="{Binding}"
-                                ToolTip="{Binding RelativePath}"/>
-                        </DockPanel>
-                    </DataTemplate>
-                </syncfusion:DockingManager.HeaderTemplate>
             <!--/ContentControl-->
             <!--syncfusion:DockingManager.HeaderTemplate>
                 <DataTemplate>
